[tool.poetry]
name = "api"
version = "1.0.0-alpha"
description = "tlda api"
authors = ["getaddrinfo <oss@getaddrinfo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.3"
typing-extensions = "^4.3.0"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
alembic = "^1.8.1"
bcrypt = "^4.0.0"
snowflake-id = "^0.0.2"
pybase62 = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
